examples/misc/error/compilation/eval_failwith.bfml
open import "std/std.bfml"

let _ = failwith "Failed"

let main = $